Initial commit - Weather ETL DE Project

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 POSTGRES_USER=etl_user
 POSTGRES_PASSWORD=etl_password
 POSTGRES_DB=weather
-POSTGRES_HOST=postgres
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
 WEATHER_API_KEY=  # not needed for open-meteo
